--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
-ANVIL_CHAIN_ID=31337
-ANVIL_FORK_URL=https://cloudflare-eth.com
 ETHERSCAN_API_KEY=
 FORGE_RPC_URL=
 FORGE_PRIVATE_KEY=
 VITE_ALCHEMY_API_KEY=
+
+ANVIL_CHAIN_ID=31337
+
+ANVIL_FORK_URL=https://mainnet.optimism.io
