--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "deploy:anvil": "source .env && forge create contracts/src/Counter.sol:Counter --rpc-url http://127.0.0.1:8545 --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80",
     "dev": "npm run wagmi && vite",
     "dev:foundry": "npm run dev & wagmi generate --watch & npm run anvil",
-    "build": "npm run wagmi && tsc && vite build",
+    "build": "npm run wagmi && vite build",
+    "build:production": "vite build",
     "preview": "vite preview",
+    "typecheck": "tsc --noEmit",
     "wagmi": "wagmi generate"
   },
   "dependencies": {
