--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "npm run wagmi && vite build",
     "build:production": "vite build",
     "preview": "vite preview",
+    "lint": "prettier --write \"**/*.{ts,tsx}\"",
     "typecheck": "tsc --noEmit",
     "wagmi": "wagmi generate"
   },
@@ -34,6 +35,7 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
     "@vitejs/plugin-react": "^3.1.0",
+    "prettier": "^2.8.4",
     "typescript": "^4.9.5",
     "vite": "^4.1.4"
   }
