--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,20 @@
+# note this is different than etherscan key
+# needs to be an optimism etherscan key
+# you can get one at https://optimistic.etherscan.io/apis
 ETHERSCAN_API_KEY=
-FORGE_RPC_URL=
+
+FORGE_RPC_URL=http://localhost:8545
+
+# run `anvil` to see the list of private keys
 FORGE_PRIVATE_KEY=
+
+# to use alchemy which will give you higher rate limits than the default rpcs,
+# sign up for an api key https://docs.alchemy.com/docs/alchemy-quickstart-guide
+# After signing up uncomment the `alchemyProvider(...)` in `src/wagmi.ts`
 VITE_ALCHEMY_API_KEY=
 
 ANVIL_CHAIN_ID=31337
 
+# when anvil is ran it will fork optimism mainnet
+# change to use optimism goerli instead
 ANVIL_FORK_URL=https://mainnet.optimism.io
