feat(.env.example): Clearer

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,15 @@
-# note this is different than etherscan key
-# needs to be an optimism etherscan key
-# you can get one at https://optimistic.etherscan.io/apis
+# Key used to upload source to Etherscan (get from https://info.etherscan.com/api-keys/)
+# You can just leave this key blank if you do not want to upload source code
+# 
 ETHERSCAN_API_KEY=
 
-FORGE_RPC_URL=http://localhost:8545
+# URL for the network. If using Alchemy with Optimism Goerli,
+# it look like this:
+# https://opt-goerli.g.alchemy.com/v2/ < Alchemy API Key >
+#
+FORGE_RPC_URL=
 
-# run `anvil` to see the list of private keys
+# Private key (on Optimism Goerli) that has ETH to deploy contracts
 FORGE_PRIVATE_KEY=
 
 # to use alchemy which will give you higher rate limits than the default rpcs,
@@ -15,6 +19,5 @@ VITE_ALCHEMY_API_KEY=
 
 ANVIL_CHAIN_ID=31337
 
-# when anvil is ran it will fork optimism mainnet
-# change to use optimism goerli instead
-ANVIL_FORK_URL=https://mainnet.optimism.io
+# Use the same URL as FORGE_RPC_URL
+ANVIL_FORK_URL=
