fix(.env.example): I was wrong on some things

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
 # Key used to upload source to Etherscan (get from https://info.etherscan.com/api-keys/)
-# You can just leave this key blank if you do not want to upload source code
 # 
 ETHERSCAN_API_KEY=
 
@@ -19,5 +18,5 @@ VITE_ALCHEMY_API_KEY=
 
 ANVIL_CHAIN_ID=31337
 
-# You can use the same URL as FORGE_RPC_URL
-ANVIL_FORK_URL=$FORGE_RPC_URL
+# Used to fork mainnet for tests
+ANVIL_FORK_URL=https://mainnet.optimism.io
