--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "wagmi": "wagmi generate"
   },
   "dependencies": {
-    "@eth-optimism/atst": "^0.0.0-20230225152958",
+    "@eth-optimism/atst": "^0.0.0-20230301065104",
     "@eth-optimism/contracts-bedrock": "^0.12.1",
     "@eth-optimism/contracts-periphery": "^1.0.7",
+    "@eth-optimism/sdk": "0.0.0-20230301065104",
     "@openzeppelin/contracts": "4.7.3",
     "@openzeppelin/contracts-upgradeable": "4.7.3",
     "@rainbow-me/rainbowkit": "^0.11.0",
