--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "optimism-starter",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "private": true,
   "scripts": {
     "anvil": "source .env && anvil --fork-url $ANVIL_FORK_URL --chain-id $ANVIL_CHAIN_ID",
@@ -16,7 +16,7 @@
     "wagmi": "wagmi generate"
   },
   "dependencies": {
-    "@eth-optimism/atst": "^0.0.0-20230302033438",
+    "@eth-optimism/atst": "^0.1.0",
     "@eth-optimism/contracts-bedrock": "^0.12.1",
     "@eth-optimism/contracts-periphery": "^1.0.7",
     "@eth-optimism/sdk": "0.0.0-20230301065104",
