--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
     "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
     "prettier": "^2.8.4",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5",
     "vite": "^4.1.4"
   }
