--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.11.1",
+    "react-router-dom": "^6.11.1",
     "util": "^0.12.4",
     "wagmi": "^0.11.7"
   },
