--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@wagmi/cli": "^0.1.10",
     "buffer": "^6.0.3",
     "ethers": "^5.7.2",
+    "nuka-carousel": "^6.0.3",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.11.1",
     "react-router-dom": "^6.11.1",
     "usehooks-ts": "^2.9.1",
