--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
     "@eth-optimism/sdk": "0.0.0-20230301065104",
     "@openzeppelin/contracts": "4.7.3",
     "@openzeppelin/contracts-upgradeable": "4.7.3",
-    "@rainbow-me/rainbowkit": "^0.11.0",
-    "@wagmi/cli": "^0.1.10",
+    "@rainbow-me/rainbowkit": "^1.0.7",
+    "@wagmi/cli": "^1.3.0",
     "buffer": "^6.0.3",
-    "ethers": "^5.7.2",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "util": "^0.12.4",
-    "wagmi": "^0.11.7"
+    "viem": "^1.4.2",
+    "wagmi": "^1.3.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.9",
