--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,7 @@ ANVIL_CHAIN_ID=31337
 
 # Used to fork mainnet for tests
 ANVIL_FORK_URL=https://mainnet.optimism.io
+
+# WalletConnect v2 requires a project ID. You can obtain it from your WC dashboard:
+# https://docs.walletconnect.com/2.0/web/web3wallet/installation#obtain-project-id
+VITE_WALLETCONNECT_PROJECT_ID=
