--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -14,7 +14,10 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
     "@rainbow-me/rainbowkit": "^1.0.2",
-    "ethers": "^5.7.2",
+    "@safe-global/api-kit": "^1.3.0",
+    "@safe-global/protocol-kit": "^1.2.0",
+    "@safe-global/safe-core-sdk-types": "^2.2.0",
+    "ethers": "5.7.2",
     "next": "^13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
