--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -33,14 +33,16 @@
         "hardhat-deploy": "^0.11.19",
         "hardhat-gas-reporter": "^1.0.9",
         "node-watch": "^0.7.3",
-        "solidity-coverage": "^0.8.2",
+        "solidity-coverage": "^0.8.4",
         "ts-node": ">=8.0.0",
         "typechain": "^8.1.0"
     },
     "dependencies": {
         "@celo/contracts": "^9.0.0",
+        "@gnosis.pm/safe-contracts": "^1.3.0",
         "@openzeppelin/contracts": "^4.9.1",
         "ganache": "^7.5.0",
+        "solidity-coverage": "^0.8.4",
         "typescript": "^4.8.4"
     }
 }
