Add grants list page

--- a/package.json
+++ b/package.json
@@ -1,29 +1,40 @@
 {
-    "name": "asd",
-    "version": "1.0.0",
-    "description": "Custom Celo Composer project.",
-    "private": true,
-    "author": "Celo",
-    "license": "MIT",
-    "scripts": {
-        "react-app:dev": "yarn workspace @asd/react-app dev",
-        "react-app:build": "yarn workspace @asd/react-app build",
-        "react-app:start": "yarn workspace @asd/react-app start",
-        "react-app:lint": "yarn workspace @asd/react-app lint"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/celo-org/celo-composer.git"
-    },
-    "bugs": {
-        "url": "https://github.com/celo-org/celo-composer/issues"
-    },
-    "homepage": "https://github.com/celo-org/celo-composer/blob/main/README.md",
-    "workspaces": [
-        "packages/*"
-    ],
-    "keywords": [
-        "celo-composer",
-        "celo"
-    ]
+  "name": "grant-visor",
+  "version": "1.0.0",
+  "description": "Custom Celo Composer project.",
+  "private": true,
+  "author": "Celo",
+  "license": "MIT",
+  "scripts": {
+    "react-app:dev": "yarn workspace @grant-visor/react-app dev",
+    "react-app:build": "yarn workspace @grant-visor/react-app build",
+    "react-app:start": "yarn workspace @grant-visor/react-app start",
+    "react-app:lint": "yarn workspace @grant-visor/react-app lint",
+    "hardhat:test": "yarn workspace @grant-visor/hardhat test",
+    "hardhat:test-local": "yarn workspace @grant-visor/hardhat test-local",
+    "hardhat:create-account": "yarn workspace @grant-visor/hardhat create-account",
+    "hardhat:accounts": "yarn workspace @grant-visor/hardhat accounts",
+    "hardhat:devchain": "yarn workspace @grant-visor/hardhat devchain",
+    "hardhat:deploy": "yarn workspace @grant-visor/hardhat deploy",
+    "hardhat:deploy-reset-watch": "yarn workspace @grant-visor/hardhat deploy-reset-watch",
+    "hardhat:watch": "yarn workspace @grant-visor/hardhat watch",
+    "hardhat:fork-mainnet": "yarn workspace @grant-visor/hardhat fork-mainnet",
+    "subgraphs:test": "yarn workspace @grant-visor/subgraphs test",
+    "subgraphs:get-abi": "yarn workspace @grant-visor/subgraphs get-abi"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/celo-org/celo-composer.git"
+  },
+  "bugs": {
+    "url": "https://github.com/celo-org/celo-composer/issues"
+  },
+  "homepage": "https://github.com/celo-org/celo-composer/blob/main/README.md",
+  "workspaces": [
+    "packages/*"
+  ],
+  "keywords": [
+    "celo-composer",
+    "celo"
+  ]
 }
