--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -18,6 +18,7 @@
     "@safe-global/api-kit": "^1.3.0",
     "@safe-global/protocol-kit": "^1.2.0",
     "@safe-global/safe-core-sdk-types": "^2.2.0",
+    "@wagmi/core": "^1.3.9",
     "ethers": "5.7.2",
     "next": "^13.4.2",
     "react": "18.2.0",
